force-app/main/default/objects/Session_Communication__c/Session_Communication__c.object-meta.xml
<CustomObject>
    <description>Custom Object used to send Session Communications with Pendula</description>
    <label>Session Communication</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Session Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>