force-app/main/default/objects/Session_Communication__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact</label>
    <referenceTo>enrtcr__Client_Contact__c</referenceTo>
    <relationshipLabel>Session Communications</relationshipLabel>
    <relationshipName>Session_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>