force-app/main/default/objects/Session_Communication__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Session Communications</relationshipLabel>
    <relationshipName>Session_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>