force-app/main/default/objects/Session_Communication__c/fields/Future_Session__c.field-meta.xml
<CustomField>
    <fullName>Future_Session__c</fullName>
    <description>For Pendula functionality. To filter out any historical Sessions from being Rostered/edited and triggering comms</description>
    <formula>NOW()&lt;= Session__r.enrtcr__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For Pendula functionality. To filter out any historical Sessions from being Rostered/edited and triggering comms</inlineHelpText>
    <label>Future Session</label>
    <type>Checkbox</type>
</CustomField>