force-app/main/default/objects/Session_Communication__c/fields/NSW_Supervisor_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>NSW_Supervisor_Mobile_Number__c</fullName>
    <description>For Pendula functionality. The mobile number in this field will be sent Late Check-In/Check-Out notifications for sessions in the NSW Region</description>
    <formula>&apos;+61459740979&apos;</formula>
    <inlineHelpText>For Pendula functionality. The mobile number in this field will be sent Late Check-In/Check-Out notifications for sessions in the NSW Region</inlineHelpText>
    <label>NSW Supervisor Mobile Number</label>
    <type>Text</type>
</CustomField>