force-app/main/default/objects/Session_Communication__c/fields/QLD_Supervisor_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>QLD_Supervisor_Mobile_Number__c</fullName>
    <description>For Pendula functionality. The mobile number in this field will be sent Late Check-In/Check-Out notifications for sessions in the QLD Region</description>
    <formula>&apos;+61432802231&apos;</formula>
    <inlineHelpText>For Pendula functionality. The mobile number in this field will be sent Late Check-In/Check-Out notifications for sessions in the QLD Region</inlineHelpText>
    <label>QLD Supervisor Mobile Number</label>
    <type>Text</type>
</CustomField>