force-app/main/default/objects/Session_Communication__c/fields/Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Recurrence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurrence</label>
    <referenceTo>enrtcr__Recurrence__c</referenceTo>
    <relationshipLabel>Session Communications</relationshipLabel>
    <relationshipName>Session_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>