force-app/main/default/objects/Session_Communication__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>enrtcr__Session__c</referenceTo>
    <relationshipLabel>Session Communications</relationshipLabel>
    <relationshipName>Session_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>