force-app/main/default/objects/Session_Communication__c/fields/Session_Recurrences__c.field-meta.xml
<CustomField>
    <fullName>Session_Recurrences__c</fullName>
    <label># Session Recurrences</label>
    <summaryForeignKey>Session_Recurrence_Communication__c.Session_Communication__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>