force-app/main/default/objects/Session_Communication__c/fields/Session_Region__c.field-meta.xml
<CustomField>
    <fullName>Session_Region__c</fullName>
    <formula>TEXT(Contact__r.enrtcr__Client_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Region</label>
    <type>Text</type>
</CustomField>