force-app/main/default/objects/Session_Communication__c/fields/VIC_Supervisor_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>VIC_Supervisor_Mobile_Number__c</fullName>
    <description>For Pendula functionality. The mobile number in this field will be sent Late Check-In/Check-Out notifications for sessions in the VIC Region</description>
    <formula>&apos;+61478525973&apos;</formula>
    <inlineHelpText>For Pendula functionality. The mobile number in this field will be sent Late Check-In/Check-Out notifications for sessions in the VIC Region</inlineHelpText>
    <label>VIC Supervisor Mobile Number</label>
    <type>Text</type>
</CustomField>