force-app/main/default/objects/Session_Communication__c/fields/Worker_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Worker_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worker Appointment</label>
    <referenceTo>enrtcr__Worker_Appointment__c</referenceTo>
    <relationshipLabel>Session Communications</relationshipLabel>
    <relationshipName>Session_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>