force-app/main/default/objects/Session_Communication__c/recordTypes/Appointment_Booked.recordType-meta.xml
<RecordType>
    <fullName>Appointment_Booked</fullName>
    <active>true</active>
    <label>Appointment Booked</label>
</RecordType>