force-app/main/default/objects/Session_Communication__c/recordTypes/Appointment_Cancelled.recordType-meta.xml
<RecordType>
    <fullName>Appointment_Cancelled</fullName>
    <active>true</active>
    <label>Appointment Cancelled</label>
</RecordType>