force-app/main/default/objects/Session_Communication__c/recordTypes/Appointment_Time_Changed.recordType-meta.xml
<RecordType>
    <fullName>Appointment_Time_Changed</fullName>
    <active>true</active>
    <label>Appointment Time Changed</label>
</RecordType>