force-app/main/default/objects/Session_Communication__c/recordTypes/Late_Checkin.recordType-meta.xml
<RecordType>
    <fullName>Late_Checkin</fullName>
    <active>true</active>
    <label>Late Checkin</label>
</RecordType>