force-app/main/default/objects/Session_Communication__c/recordTypes/Late_Checkout.recordType-meta.xml
<RecordType>
    <fullName>Late_Checkout</fullName>
    <active>true</active>
    <label>Late Checkout</label>
</RecordType>