force-app/main/default/objects/Session_Communication__c/recordTypes/Recurrence_Changed.recordType-meta.xml
<RecordType>
    <fullName>Recurrence_Changed</fullName>
    <active>true</active>
    <label>Recurrence Changed</label>
</RecordType>