force-app/main/default/objects/Session_Communication__c/recordTypes/Recurrence_Confirmation.recordType-meta.xml
<RecordType>
    <fullName>Recurrence_Confirmation</fullName>
    <active>true</active>
    <label>Recurrence Confirmation</label>
</RecordType>