force-app/main/default/objects/Session_Communication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Session_Region__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Session__c</columns>
    <columns>Client_Appointment__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>